Desafio Módulo 2 - exercicio 1

--- a/2_manipulandoDom/exercicios/index.html
+++ b/2_manipulandoDom/exercicios/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicios</title>
+    <title>Desafio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="app">
-        <input type="text" name="nome" id="nome">
-        <button class="botao">Adicionar</button>
+       <button class="add"></button>
+        
     </div>
 
 
