--- a/2_manipulandoDom/exercicios/index.html
+++ b/2_manipulandoDom/exercicios/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-       <button class="add"></button>
-        
-    </div>
+    <input type="text" name="nome">
+    <button class="botao" onClick="adicionar()">Adicionar</button>
 
 
     <script src="scripts.js"></script>
